# ComfyUI-ntfy

./: __init__.py  ntfy.py  pyproject.toml  readme.md
